# canvas-archive

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
infra/: main.tf  outputs.tf  providers.tf  variables.tf
infra/templates/: README.md.tftpl  gitattributes.tftpl
profiles/: README.md  cmpt-306-algorithms.yaml
src/canvas_archive/: cli.py  pipeline.py  profiles.py
src/canvas_archive/core/: canvas.py  git_ops.py  markdown.py  slug.py
src/canvas_archive/extractors/: __init__.py  base.py  canvas_only.py  external_site.py
